2006-01-05  thetroublemaker  <thetroublemaker@inventati.org>

	* src/ephy-notebook.c:

	changed ephy_tab_get_title_composite to ephy_tab_get_title,
	so that now 'Loading ' is not displayed when loadin' a new
	tab. Bug #323468.

2006-01-08  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c: (ephy_window_delete_event):

	Exit ppv mode when clicking the window close button. Bug #326136.

2006-01-08  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/ContentHandler.cpp:

	Make ESC cancel the content handler dialogue. Bug #325811.

2006-01-06  Crispin Flowerday  <gnome@flowerday.cx>

	* src/window-commands.c (window_cmd_help_about): 

	Change the copyright year to 2006

2006-01-06  Christian Persch  <chpe@cvs.gnome.org>

	* data/Makefile.am:
	R data/epiphany.applications:

	Remove applications file.

2006-01-04  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-adblock.c:
	* lib/ephy-file-helpers.c:

	Fix compiler warnings.

2006-01-04  Christian Persch  <chpe@cvs.gnome.org>

	R data/art/epiphany-close-tab.png:
	* lib/ephy-stock-icons.c: (ephy_stock_icons_init):
	* lib/ephy-stock-icons.h:
	* src/ephy-notebook.c: (build_tab_label):

	Go back to using the gtk stock close icon, to get correct
	themeing in a11y themes.

2006-01-04  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-find-toolbar.c: (entry_changed_cb), (set_focus_cb),
	(ephy_find_toolbar_grab_focus), (ephy_find_toolbar_find_next),
	(ephy_find_toolbar_find_previous), (ephy_find_toolbar_open),
	(ephy_find_toolbar_close):

	Fix warning when Ctrl-F while the find toolbar is already shown.
	Fix next/prev button sensitivity when find wrapped around.

	* src/ephy-window.c:

	Add more XF86XK key codes.

2006-01-03  Crispin Flowerday  <gnome@flowerday.cx>

	* configure.ac:
	* src/ephy-main.c:
	R src/ephy-automation.h:

	Remove various references to bonobo, ephy is now officially
	monkey free!

2006-01-03  Crispin Flowerday  <gnome@flowerday.cx>

	* src/Makefile.am:
