@@ -1,3 +1,13 @@
+2006-01-08  Christian Persch  <chpe@cvs.gnome.org>
+
+	* configure.ac:
+	R data/epiphany-1.10.pc.in:
+	A data/epiphany.pc.in:
+	* m4/gecko.m4:
+
+	Various improvements to gecko.m4. Generate the versioned .pc file
+	from the unversioned .pc.in file.
+
 2006-01-05  thetroublemaker  <thetroublemaker@inventati.org>
 
 	* src/ephy-notebook.c:
